# cortex_pkm

./: .gitignore  README.md  pyproject.toml
cor/: __init__.py  bibtex.py  cli.py  completions.py  config.py  crossref.py  dependencies.py  exceptions.py  fuzzy.py  llm.py  maintenance.py  parser.py  schema.py  utils.py
cor/assets/: cortex.lua  note.md  prompts.yaml  root.md  schema.yaml  task.md
cor/cli/: __init__.py  config.py  init.py  maintenance.py  notes.py  search_cmd.py
cor/commands/: __init__.py  (+8 more)
docs/: nvim.md
example_notes/: backlog.md  baking.md  baking.new_recipe_from_link.md  baking.recipe_notebook.md  baking.test_new_flour.md  eval-suite.benchmark_catalog.md  eval-suite.md  eval-suite.metric_defs.md  eval-suite.reporting.md  foundation_model.ablation_suite.md  foundation_model.data.md  foundation_model.data.safety_filter.md  foundation_model.data.tokenizer_refresh.md  foundation_model.dataset_curation.md  foundation_model.decisions.md  foundation_model.eval_harness.md  foundation_model.experiments.checkpoint_policy.md  foundation_model.experiments.clip_tuning.md  foundation_model.experiments.md  foundation_model.lab_notes.md  foundation_model.md  foundation_model.training_pipeline.md  learning-log.md  paper.md  paper.method.md  random-ideas.md  root.md
tests/: conftest.py  test_bulk_operations.py  test_cli.py  test_cli_natural_language.py  test_dependencies.py  test_inbox.py  test_links.py  test_maintenance.py  test_move_within_project.py  test_natural_language.py  test_notes.py  test_precommit.py  test_rename_group_parent.py  test_rename_shortcuts.py  test_search.py  test_tui.py
(+18 files in other folders)
