[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cor-text"
version = "0.1.4"
description = "Cor - Plain text knowledge management for the terminal"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "lbugnon", email = "lbugnon@sinc.unl.edu.ar"}
]
keywords = ["markdown", "knowledge-management", "notes", "pkm", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.0",
    "rapidfuzz>=3.0",
    "simple-term-menu>=1.6",
    "habanero>=1.2",
    "arxiv>=2.0.0",
    "bibtexparser>=1.4",
    "dateparser>=1.2",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.1",
    "google-api-python-client>=2.0",
    "ripgrepy>=2.0",  # Python wrapper for ripgrep binary
    "textual>=0.50.0",
]

[project.urls]
Repository = "https://github.com/lbugnon/cor"

[project.scripts]
cor = "cor.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cor*"]

[tool.setuptools.package-data]
cor = ["assets/*.md", "assets/*.yaml", "assets/*.lua", "hooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
